# backend/docs/swagger.yaml
@@ -55,10 +55,9 @@ definitions:
   ent.PhysicianEdges:
     properties:
       formuser:
+        $ref: '#/definitions/ent.Positionassingment'
         description: Formuser holds the value of the formuser edge.
-        items:
-          $ref: '#/definitions/ent.Positionassingment'
-        type: array
+        type: object
     type: object
   ent.Position:
     properties:
